# Diffusion-Counterfactuals

./: README.md  pyproject.toml  slurm_celeba.sh  slurm_embed.sh  slurm_mnist.sh  slurm_mnist_cond_d.sh  slurm_mnist_cond_it.sh  slurm_mnist_sem_d.sh  slurm_mnist_sem_it.sh  train.sh  train_attr.sh  train_clf.sh
benchmarking/: artefact_removal_slurm.sh  celeba.py  celeba_f1.py  celeba_f1_slurm.sh  celeba_nto.py  celeba_nto_slurm.sh  celeba_slurm.sh  celeba_slurm_tradeoffs.sh  composition.py  effectiveness.py  embed.py  embed_artefact_removal.py  embed_metrics.sh  l1_distance.py  lpips.py  mnist_ce_slurm.sh  mnist_metrics_slurm.sh  mnist_slurm.sh  morphomnist.py  morphomnist2.py  morphomnist3.py  morphomnist4.py  morphomnist4_it.py  morphomnist4_it_mse.py  morphomnist4_its_mse.py  morphomnist_causal_effects.py  reversibility.py  utils.py
benchmarking/digit_cf/: diff.py  vci.py
diffae/: interface.py  mechanism.py  trainer.py
diffae/cfg/: 128_model.yml  64_model.yml  64_model_original.yml  64_model_working.yml  64_model_working_final.yml
diffae/models/: encoder.py  loss.py  model.py  unet.py
model/: dataset.py  mnist.py  sampler.py
model/cfg/: 192_model.yml  256_model.yml  28_model.yml  28_model_working.yml
model/models/: network_blocks.py
model/utils/: general.py
scm/: base.py  full_scm.py
scm/image_mechanism/: base.py  diffae.py  diffae_cta.py  diffusion.py  hvae.py  vae.py  vci.py
scm/numerical_mechanism/: celeba.py  morphomnist.py
scripts/: train.py
